fix: make things look a tiny bit better on mobile

--- a/frontend/src/assets/style.scss
+++ b/frontend/src/assets/style.scss
@@ -112,4 +112,8 @@ nav {
       margin-bottom: 0.4em;
     }
   }
+
+  #now-playing {
+    left: 0;
+  }
 }
